@@ -402,7 +402,15 @@ public class FormGroupMaintenanceComponent extends MaintComponent2 {
                 if( m_relatedObjectFormUsageDto[j].getEventName().equals( ((String)row.getElement("eventName")) )){
                     m_relatedObjectFormUsageDto[j].setFormAlternate(((EditBoxModel)row.getElement("formAlternate")).getValue());
                     try{
-                        m_relatedObjectFormUsageDto[j].setCopies(new Long(((EditBoxModel)row.getElement("copies")).getValue()));
+                        EditBoxModel copiesElement = (EditBoxModel) row.getElement("copies");
+                        if (copiesElement == null) {
+                            throw new ApplicationExceptions(new ApplicationException("exception.Jaffa.Printing.FormGroupMaintenance.copiesValidation") {});
+                        }
+                        String copies = copiesElement.getValue();
+                        if (copies == null) {
+                            throw new ApplicationExceptions(new ApplicationException("exception.Jaffa.Printing.FormGroupMaintenance.copiesValidation") {});
+                        }
+                        m_relatedObjectFormUsageDto[j].setCopies(Long.valueOf(copies));
                     }catch(NumberFormatException ne){
                         throw new ApplicationExceptions(new ApplicationException("exception.Jaffa.Printing.FormGroupMaintenance.copiesValidation") {});
                     }
